# producer_consumer

./: .gitignore  CMakeLists.txt  IBufferItem.h  README.md  bufferItem.cpp  bufferItem.h  consumer.cpp  consumer.h  main  main.cpp  main.h  makefile  manager.cpp  manager.h  producer.cpp  producer.h  sharedBuffer.cpp  sharedBuffer.h  test.cpp  test.h  valgrind_check.cpp  valgrind_check.h
pc/: IPC.h
pc/include/: IActor.h  consumer.h  manager.h  sharedBuffer.h
pc/src/: CMakeLists.txt  IActor.cpp  IPC.cpp  manager.cpp  sharedBuffer.cpp
producer_consumer/include/: sharedBuffer.h
producer_consumer/src/: CMakeLists.txt  producer.cpp  valgrind_check.cpp
testApps/include/: test.h
testApps/src/: CMakeLists.txt  main.cpp  test.cpp
